[package]
name = "sb-stalky"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
notify = "5.0.0"
sb-sbity = { git = "https://github.com/rusty-scratch/sb-sbity" }
rand = "0.8.5"
zip = "0.6.3"
serde_json = "1.0.91"
toml = "0.6.0"
serde = { version = "1.0.152", features = ["derive"] }
